apps/sonarr/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.ramoneees.com`)
      kind: Rule
      services:
        - name: sonarr
          port: 8989
  tls:
    secretName: wildcard-ramoneees-com-tls
